.k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namias-portfolio
  labels:
    app.kubernetes.io/part-of: namias-portfolio
