.k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-v1
  namespace: namias-portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio-v1
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: namias-portfolio
spec:
  type: ClusterIP
  selector:
    app: ai-service
  ports:
    - name: http
      port: 8787
      targetPort: 8787
---
apiVersion: v1
kind: Service
metadata:
  name: studio
  namespace: namias-portfolio
spec:
  type: ClusterIP
  selector:
    app: studio
  ports:
    - name: http
      port: 3333
      targetPort: 3333
